# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: engine.py
brain_games/games/: calc.py  even.py  gcd.py  is_prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games1.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py
