[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Tatka1803 <<tanyaak16@gmail.com>>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
packages = "^0.1.1"
prompt = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games1:main"